@@ -3,6 +3,10 @@ proiel-webapp. It does not list all changes; see the git history for that.
 
 1.6.0   unreleased
 
+  - Removed option to export only reviewed sentences. The PROIEL CLI now
+    does this. Note that this also means that the files that can be
+    downloaded from the 'Downloads' area now contain both reviewed and
+    unreviewed data.
   - Removed TigerXML and Tiger2 exporters. PROIEL XML can now be converted
     to these formats by using the PROIEL command-line utilities.
   - Removed raw text importer. The command-line utilities should now be
